--- a/estilo/main.css
+++ b/estilo/main.css
@@ -1,40 +1,68 @@
-/* head */
+
 
 .bloco1{
     position: absolute;
 width: 100%;
-height: 50px;
+height: 45px;
 left: 0px;
 top: 0px;
-
+float: right;
 background: #052026;
 }
 
 .paragrafo{
     font-family: Arial, Helvetica, sans-serif;
-
+    text-align: center;
 }
+
+.background{
+    width: 360px;
+    height: 227px;
+}
+
 .titulo{
     font-family: Arial, Helvetica, sans-serif;
 }
-.footer{
-    /* footer */
 
-position: absolute;
+.footer{
+position: relative;
 width: 100%;
 height: 35px;
 left: 0px;
 bottom: 0px;
-
 background: #052026;
-
 }
+
 .prodape{
     color: aliceblue;
     left: 50px;
     font-family: Arial, Helvetica, sans-serif;
     text-align: center;
 }
+
+.sympla-widget-689787 {
+    position: absolute;
+    width: 580px;
+    height: 175px;
+    left: 972px;
+    top: 848px;
+     background: url(image.png);
+     text-align: right;
+}
+.Patrocinadores{
+    text-align: center;
+}
+
+.box {
+    
+    height: auto;
+    width: 350;
+    text-align: center;
+}
+
+
+
+
 
 
 
